feat(wrangler): deploy from laptop directly
- no deployment forced on push and more control
- delete now unused script
- add wrangler dependency and recipes to makefile

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ public.min/
 static/processed_images/
 # generated css higlight themes
 static/syntax-theme-base16-ocean-dark.css
+
+# Cloudflare Wrangler cache
+.wrangler/
