--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
     "name": "zorrn.net",
     "type": "module",
     "scripts": {
-        "lint:fix": "xo --fix && prettier --write .",
-        "lint": "xo && prettier --check ."
+        "lint": "xo --fix && prettier --write .",
+        "w:deploy": "wrangler pages deploy ./public.min"
     },
     "devDependencies": {
         "prettier": "^3.2.5",
         "prettier-plugin-toml": "^2.0.1",
+        "wrangler": "^3.57.1",
         "xo": "^0.58.0"
     }
 }
