--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 title = "Frederik Zorn's Blog"
-# !! Set same value in Justfile otherwise it has no effect !!
+# !! Set same value in Makefile otherwise it has no effect !!
 base_url = "https://www.zorrn.net"
 description = "Frederik Zorn's blog and no-nonsense site"
 
@@ -8,8 +8,8 @@ description = "Frederik Zorn's blog and no-nonsense site"
 
 compile_sass = true
 #minify_html = true
-generate_feed = true
-feed_filename = "atom.xml"
+generate_feeds = true
+feed_filenames = ["atom.xml"]
 build_search_index = true
 
 # Default author name
@@ -22,10 +22,10 @@ taxonomies = [{ name = "tags", feed = true }]
 # Whether to do syntax highlighting
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = true
-highlight_theme = "css"
-highlight_themes_css = [
-    { theme = "base16-ocean-dark", filename = "syntax-theme-base16-ocean-dark.css" },
-]
+#highlight_theme = "css"
+#highlight_themes_css = [
+#    { theme = "base16-ocean-dark", filename = "syntax-theme-base16-ocean-dark.css" },
+#]
 
 [extra]
 # Put all your custom variables here
